--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-datepicker": "^3.1.3",
 		"react-dom": "^16.13.1",
 		"react-modal": "^3.11.2",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"semantic-ui-css": "^2.4.1",
 		"semantic-ui-react": "^1.3.0"
